--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="reset" href="./Assets/css/reset.css" />
-    <link rel="style" href="./Assets/css/style.css" />
+    <!-- <link rel="reset" href="./Assets/css/reset.css" /> -->
+    <link rel="stylesheet" href="./Assets/css/style.css" />
   </head>
   <body>
     <div class="wrapper">
